fixed menu overflow problem

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,24 +1,22 @@
 .menu {
   position: absolute;
+  top: 0;
   left: 0;
   right: 0;
-  top: 0;
   flex-direction: column;
-  height: 100vh;
   transition: all 0.3s ease-in-out;
   transform: translateY(-100%);
   z-index: 2;
+
   &:target {
     height: 100vh;
+    overflow: hidden;
     margin: 0;
-    display: block;
     transform: translateY(0);
     background: rgba(24, 24, 26, 0.5);
-    scroll-snap-type: none;
   }
 
   &-wrapper {
-
     display: flex;
     flex-direction: column;
     gap: 48px;
