--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,4 +8,8 @@ html {
 
 body {
   background: $c-gray;
+
+  &:has(.menu:target) {
+    overflow: hidden;
+  }
 }
